--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -269,8 +269,9 @@
 "returned": "تم الإرجاع",
 "unknown_status": "حالة غير معروفة",
 "at": "في",
+"delete_confirm_title": "هل أنت متأكد؟",
 "delete_post_title": "هل تريد الحذف؟",
-"delete_post_text": "لن تتمكن من التراجع عن هذا!",
+"delete_post_text": "لن تتمكن من التراجع عن هذا",
 "delete_post_confirm": "نعم، حذف",
 "delete_post_cancel": "إلغاء",
 "delete_post_success_title": "تم الحذف!",
