--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -487,12 +487,12 @@
 "Matière": "المادة",
 "Matière de chaussures": "مادة الحذاء",
 "Hauteur du talon (cm)": "ارتفاع الكعب (سم)",
-"Pointure Enfant": "مقاس حذاء الطفل",
+"Pointure Enfant": "مقاس حذاء الولد",
 "Pointure": "مقاس الحذاء",
-"Pointure Bébé": "مقاس حذاء الرضيع",
+"Pointure Bébé": "مقاس حذاء الطفل",
 "Mesures / Dimensions": "القياسات / الأبعاد",
-"Taille Bébé": "مقاس الرضيع",
-"Taille Enfant": "مقاس الطفل",
+"Taille Bébé": "مقاس الطفل",
+"Taille Enfant": "مقاس الولد",
 "Type de calculatrice": "نوع الآلة الحاسبة",
 "Nom et/ nombre du modèle": "اسم/رقم الموديل",
 "Langue": "اللغة",
@@ -592,35 +592,47 @@
 "auth.no_permission": "ليست لديك صلاحية تسجيل الدخول.",
 "auth.account_locked": "تم حظر الحساب. يرجى <a href='/contact' style='font-weight: 500; text-decoration: underline; color:#565556;'>الضغط هنا</a> للتواصل مع المسؤول لإعادة تفعيل حسابك.",
 "error.forbidden_word": "الكلمة ':word' غير مسموح بها في حقل :field.",
-  "error.email_exists": "عنوان البريد الإلكتروني هذا مستخدم بالفعل.",
-  "error.username_exists": "اسم المستخدم هذا مستخدم بالفعل.",
-  "error.invalid_file_type": "يرجى اختيار تنسيق ملف صالح.",
-  "error.invalid_image": "يرجى اختيار صورة صالحة.",
-  "error.max_size": "يرجى اختيار ملف بحجم أقل من 2 ميغابايت.",
-  "error.invalid_date": "يرجى اختيار تاريخ صالح.",
-  "error.invalid_type": "يرجى إدخال قيمة نصية.",
-  "error.invalid_integer": "يرجى إدخال قيمة عددية صحيحة.",
-  "error.gender_required": "يرجى اختيار جنسك.",
-  "error.age_limit": "الحد الأدنى للعمر هو 13 سنة.",
-  "error.email_send": "حدث خطأ أثناء إرسال بريد التحقق، لكن تم إنشاء الحساب!",
-  "success.account_created": "تم إنشاء حسابك بنجاح!<br>لإكمال التسجيل، انقر على رابط التحقق الذي أرسلناه إلى بريدك الإلكتروني. شكرًا ومرحبًا بك!",
-  "validation.required": "هذا الحقل مطلوب.",
-  "validation.city_required": "يرجى إدخال المدينة.",
-  "validation.street_required": "يرجى إدخال الشارع.",
-  "validation.password.min": "يجب أن يحتوي كلمة المرور على 8 أحرف على الأقل.",
-  "validation.password.confirmed": "كلمات المرور غير متطابقة. يرجى التحقق والمحاولة مرة أخرى.",
-  "validation.password.regex": "يجب أن تحتوي كلمة المرور على حرف كبير وحرف صغير ورقم ورمز خاص واحد على الأقل (-!@# إلخ).",
-  "username_invalid": "يجب أن يحتوي اسم المستخدم على أحرف وأرقام ورموز خاصة فقط (-!@# وما إلى ذلك).",
-  "voyage.activated.title": "تم تفعيل وضع السفر",
-  "voyage.activated.description": "ستكون إعلاناتك غير مرئية مؤقتًا للمستخدمين الآخرين. ستظهر تلقائيًا عند إلغاء تفعيل هذا الوضع",
-  "voyage.deactivated.title": "لقد خرجت من وضع السفر",
-  "voyage.deactivated.description": "إعلاناتك مرئية مرة أخرى",
-   "Membre depuis le": "عضو منذ",
-     "Noter le SHOP": "قيّم الشوب<span class=\"color strong\">ين</span>ر",
-     "Votre publication est en cours de validation": "يتم حاليًا مراجعة منشورك",
-  "Vous recevrez une notification une fois qu'elle sera approuvée.": "ستتلقى إشعارًا بمجرد الموافقة عليه",
-  "Fermer": "إغلاق",
-    "Publier": "نشر"
+"error.email_exists": "عنوان البريد الإلكتروني هذا مستخدم بالفعل.",
+"error.username_exists": "اسم المستخدم هذا مستخدم بالفعل.",
+"error.invalid_file_type": "يرجى اختيار تنسيق ملف صالح.",
+"error.invalid_image": "يرجى اختيار صورة صالحة.",
+"error.max_size": "يرجى اختيار ملف بحجم أقل من 2 ميغابايت.",
+"error.invalid_date": "يرجى اختيار تاريخ صالح.",
+"error.invalid_type": "يرجى إدخال قيمة نصية.",
+"error.invalid_integer": "يرجى إدخال قيمة عددية صحيحة.",
+"error.gender_required": "يرجى اختيار جنسك.",
+"error.age_limit": "الحد الأدنى للعمر هو 13 سنة.",
+"error.email_send": "حدث خطأ أثناء إرسال بريد التحقق، لكن تم إنشاء الحساب!",
+"success.account_created": "تم إنشاء حسابك بنجاح!<br>لإكمال التسجيل، انقر على رابط التحقق الذي أرسلناه إلى بريدك الإلكتروني. شكرًا ومرحبًا بك!",
+"validation.required": "هذا الحقل مطلوب.",
+"validation.city_required": "يرجى إدخال المدينة.",
+"validation.street_required": "يرجى إدخال الشارع.",
+"validation.password.min": "يجب أن يحتوي كلمة المرور على 8 أحرف على الأقل.",
+"validation.password.confirmed": "كلمات المرور غير متطابقة. يرجى التحقق والمحاولة مرة أخرى.",
+"validation.password.regex": "يجب أن تحتوي كلمة المرور على حرف كبير وحرف صغير ورقم ورمز خاص واحد على الأقل (-!@# إلخ).",
+"username_invalid": "يجب أن يحتوي اسم المستخدم على أحرف وأرقام ورموز خاصة فقط (-!@# وما إلى ذلك).",
+"voyage.activated.title": "تم تفعيل وضع السفر",
+"voyage.activated.description": "ستكون إعلاناتك غير مرئية مؤقتًا للمستخدمين الآخرين. ستظهر تلقائيًا عند إلغاء تفعيل هذا الوضع",
+"voyage.deactivated.title": "لقد خرجت من وضع السفر",
+"voyage.deactivated.description": "إعلاناتك مرئية مرة أخرى",
+"Membre depuis le": "عضو منذ",
+"Noter le SHOP": "قيّم الشوب<span class=\"color strong\">ين</span>ر",
+"Votre publication est en cours de validation": "يتم حاليًا مراجعة منشورك",
+"Vous recevrez une notification une fois qu'elle sera approuvée.": "ستتلقى إشعارًا بمجرد الموافقة عليه",
+"Fermer": "إغلاق",
+"Publier": "نشر",
+"2 ans": "سنتان",
+  "3 ans": "3 سنوات",
+  "4 ans": "4 سنوات",
+  "5 ans": "5 سنوات",
+  "6 ans": "6 سنوات",
+  "7 ans": "7 سنوات",
+  "8 ans": "8 سنوات",
+  "9 ans": "9 سنوات",
+  "10 ans": "10 سنوات",
+  "11 ans": "11 سنة",
+  "12 ans": "12 سنة",
+  "13 ans": "13 سنة"
 
 
 
