--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -620,7 +620,19 @@
   "Votre publication est en cours de validation": "Your post is being reviewed",
   "Vous recevrez une notification une fois qu'elle sera approuvée.": "You will receive a notification once it is approved.",
   "Fermer": "Close",
-  "Publier": "Publish"
+  "Publier": "Publish",
+   "2 ans": "2 years",
+  "3 ans": "3 years",
+  "4 ans": "4 years",
+  "5 ans": "5 years",
+  "6 ans": "6 years",
+  "7 ans": "7 years",
+  "8 ans": "8 years",
+  "9 ans": "9 years",
+  "10 ans": "10 years",
+  "11 ans": "11 years",
+  "12 ans": "12 years",
+  "13 ans": "13 years"
 
 
 
