--- a/resources/lang/fr.json
+++ b/resources/lang/fr.json
@@ -622,7 +622,19 @@
 "Votre publication est en cours de validation": "Votre publication est en cours de validation",
   "Vous recevrez une notification une fois qu'elle sera approuvée.": "Vous recevrez une notification une fois qu'elle sera approuvée.",
   "Fermer": "Fermer",
-    "Publier": "Publier"
+    "Publier": "Publier",
+     "2 ans": "2 ans",
+  "3 ans": "3 ans",
+  "4 ans": "4 ans",
+  "5 ans": "5 ans",
+  "6 ans": "6 ans",
+  "7 ans": "7 ans",
+  "8 ans": "8 ans",
+  "9 ans": "9 ans",
+  "10 ans": "10 ans",
+  "11 ans": "11 ans",
+  "12 ans": "12 ans",
+  "13 ans": "13 ans"
 
 
 
