--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -632,8 +632,9 @@
   "10 ans": "10 سنوات",
   "11 ans": "11 سنة",
   "12 ans": "12 سنة",
-  "13 ans": "13 سنة"
-
+  "13 ans": "13 سنة",
+  "price_luxury_error_high": "يجب أن يتجاوز سعر البيع 800 درهم ليتم إضافته إلى فئة الفخامة",
+"price_luxury_error_low": "يجب أن يكون سعر البيع أقل من 800 درهم للمنتج غير الفخامة من هذه الفئة."
 
 
 
