fix-seller-notif-trans-mail

--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -102,6 +102,7 @@
 "Frais de Livraison": "رسوم التوصيل",
 "Ajouter": "أضف إلى السلة",
 "Retire": "تمت الإزالة من السلة",
+"Retire2": "ازالة من السلة",
 "Réduire le prix": "خفض السعر",
 "Ajouter aux favoris": "أضف إلى المفضلة",
 "Retirer des favoris": "إزالة من المفضلة",
@@ -622,19 +623,26 @@
 "Fermer": "إغلاق",
 "Publier": "نشر",
 "2 ans": "سنتان",
-  "3 ans": "3 سنوات",
-  "4 ans": "4 سنوات",
-  "5 ans": "5 سنوات",
-  "6 ans": "6 سنوات",
-  "7 ans": "7 سنوات",
-  "8 ans": "8 سنوات",
-  "9 ans": "9 سنوات",
-  "10 ans": "10 سنوات",
-  "11 ans": "11 سنة",
-  "12 ans": "12 سنة",
-  "13 ans": "13 سنة",
-  "price_luxury_error_high": "يجب أن يتجاوز سعر البيع 800 درهم ليتم إضافته إلى فئة الفخامة",
-"price_luxury_error_low": "يجب أن يكون سعر البيع أقل من 800 درهم للمنتج غير الفخامة من هذه الفئة."
+"3 ans": "3 سنوات",
+"4 ans": "4 سنوات",
+"5 ans": "5 سنوات",
+"6 ans": "6 سنوات",
+"7 ans": "7 سنوات",
+"8 ans": "8 سنوات",
+"9 ans": "9 سنوات",
+"10 ans": "10 سنوات",
+"11 ans": "11 سنة",
+"12 ans": "12 سنة",
+"13 ans": "13 سنة",
+"price_luxury_error_high": "يجب أن يتجاوز سعر البيع 800 درهم ليتم إضافته إلى فئة الفخامة",
+"price_luxury_error_low": "يجب أن يكون سعر البيع أقل من 800 درهم للمنتج غير الفخامة من هذه الفئة.",
+"order_notification": "إشعار الطلب",
+"salutation": "مرحبًا",
+"new_order_message": "نعلمك بأنك تلقيت طلبًا جديدًا من <span class=\"pseudo\">:buyer_pseudo</span>. يرجى تحضير المنتج للشحن. سيتصل بك مندوب التوصيل من شريكنا اللوجستي قريبًا لاستلام المنتج.",
+"order_summary": "ملخص الطلب",
+"receive_amount": "المبلغ الذي ستستلمه في حسابك البنكي بالدرهم هو:",
+"bank_info_confirmation": "يرجى <a href=\":link\" class=\"underlined-link\">النقر هنا</a> لتأكيد أو تحديث معلوماتك البنكية (RIB)، حتى نتمكن من تحويل الأموال إليك عند اكتمال عملية البيع.",
+"footer_thanks": "شكرًا لثقتك بنا وإلى اللقاء!"
 
 
 
