--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -591,50 +591,57 @@
 "auth.verify_email": "Please check your inbox to verify your account.",
 "auth.no_permission": "You do not have permission to log in.",
 "auth.account_locked": "Account locked. Please <a href='/contact' style='font-weight: 500; text-decoration: underline; color:#565556;'>click here</a> to contact an administrator and reactivate your account.",
-  "error.forbidden_word": "The word ':word' is not allowed in the :field field.",
-  "error.email_exists": "This email address is already in use.",
-  "error.username_exists": "This username is already taken.",
-  "error.invalid_file_type": "Please choose a valid file format.",
-  "error.invalid_image": "Please choose a valid image.",
-  "error.max_size": "Please select a file smaller than 2MB.",
-  "error.invalid_date": "Please select a valid date.",
-  "error.invalid_type": "Please enter a text value.",
-  "error.invalid_integer": "Please enter an integer value.",
-  "error.gender_required": "Please select your gender.",
-  "error.age_limit": "The minimum age is 13 years.",
-  "error.email_send": "An error occurred while sending the verification email, but the account has been created!",
-  "success.account_created": "Your account has been successfully created!<br>To complete your registration, click the verification link we sent to your email. Thank you and welcome!",
-  "validation.required": "This field is required.",
-  "validation.city_required": "Please enter the city.",
-  "validation.street_required": "Please enter the street.",
-  "validation.password.min": "Your password must be at least 8 characters long.",
-  "validation.password.confirmed": "Passwords do not match. Please verify and try again.",
-  "validation.password.regex": "Your password must contain at least one uppercase letter, one lowercase letter, one number, and one special character (-!@# etc.).",
+"error.forbidden_word": "The word ':word' is not allowed in the :field field.",
+"error.email_exists": "This email address is already in use.",
+"error.username_exists": "This username is already taken.",
+"error.invalid_file_type": "Please choose a valid file format.",
+"error.invalid_image": "Please choose a valid image.",
+"error.max_size": "Please select a file smaller than 2MB.",
+"error.invalid_date": "Please select a valid date.",
+"error.invalid_type": "Please enter a text value.",
+"error.invalid_integer": "Please enter an integer value.",
+"error.gender_required": "Please select your gender.",
+"error.age_limit": "The minimum age is 13 years.",
+"error.email_send": "An error occurred while sending the verification email, but the account has been created!",
+"success.account_created": "Your account has been successfully created!<br>To complete your registration, click the verification link we sent to your email. Thank you and welcome!",
+"validation.required": "This field is required.",
+"validation.city_required": "Please enter the city.",
+"validation.street_required": "Please enter the street.",
+"validation.password.min": "Your password must be at least 8 characters long.",
+"validation.password.confirmed": "Passwords do not match. Please verify and try again.",
+"validation.password.regex": "Your password must contain at least one uppercase letter, one lowercase letter, one number, and one special character (-!@# etc.).",
 "username_invalid": "The username may only contain letters, numbers, and special characters (-!@# etc.).",
 "voyage.activated.title": "Travel mode activated",
-  "voyage.activated.description": "Your items will be temporarily invisible to other users. They will reappear automatically when you deactivate this mode.",
-  "voyage.deactivated.title": "You have exited Travel Mode",
-  "voyage.deactivated.description": "Your items are visible again.",
-  "Membre depuis le": "Member since",
-    "Noter le SHOP": "Rate the SHOP<span class=\"color strong\">IN</span>ER",
-  "Votre publication est en cours de validation": "Your post is being reviewed",
-  "Vous recevrez une notification une fois qu'elle sera approuvée.": "You will receive a notification once it is approved.",
-  "Fermer": "Close",
-  "Publier": "Publish",
-   "2 ans": "2 years",
-  "3 ans": "3 years",
-  "4 ans": "4 years",
-  "5 ans": "5 years",
-  "6 ans": "6 years",
-  "7 ans": "7 years",
-  "8 ans": "8 years",
-  "9 ans": "9 years",
-  "10 ans": "10 years",
-  "11 ans": "11 years",
-  "12 ans": "12 years",
-  "13 ans": "13 years",
-   "price_luxury_error_high": "The sale price must exceed 800 DH to be added to the LUXURY category",
-  "price_luxury_error_low": "The sale price must be less than 800 DH for the non-luxury version of this category."
+"voyage.activated.description": "Your items will be temporarily invisible to other users. They will reappear automatically when you deactivate this mode.",
+"voyage.deactivated.title": "You have exited Travel Mode",
+"voyage.deactivated.description": "Your items are visible again.",
+"Membre depuis le": "Member since",
+"Noter le SHOP": "Rate the SHOP<span class=\"color strong\">IN</span>ER",
+"Votre publication est en cours de validation": "Your post is being reviewed",
+"Vous recevrez une notification une fois qu'elle sera approuvée.": "You will receive a notification once it is approved.",
+"Fermer": "Close",
+"Publier": "Publish",
+"2 ans": "2 years",
+"3 ans": "3 years",
+"4 ans": "4 years",
+"5 ans": "5 years",
+"6 ans": "6 years",
+"7 ans": "7 years",
+"8 ans": "8 years",
+"9 ans": "9 years",
+"10 ans": "10 years",
+"11 ans": "11 years",
+"12 ans": "12 years",
+"13 ans": "13 years",
+"price_luxury_error_high": "The sale price must exceed 800 DH to be added to the LUXURY category",
+"price_luxury_error_low": "The sale price must be less than 800 DH for the non-luxury version of this category.",
+"order_notification": "Order Notification",
+"salutation": "Hello",
+"new_order_message": "We inform you that you have received a new order from <span class=\"pseudo\">:buyer_pseudo</span>. Please prepare the item for shipping. A delivery agent from our logistics partner will contact you soon to pick up the item.",
+"order_summary": "Order Summary",
+"receive_amount": "The amount you will receive in your bank account in Dhs is:",
+"bank_info_confirmation": "Please <a href=\":link\" class=\"underlined-link\">click here</a> to confirm or update your banking information (RIB), so we can transfer the funds to you when the sale process is completed.",
+"footer_thanks": "Thank you for your trust and see you soon!"
 
 
 
