--- a/resources/lang/fr.json
+++ b/resources/lang/fr.json
@@ -594,49 +594,56 @@
 "auth.no_permission": "Vous n'avez pas l'autorisation de vous connecter.",
 "auth.account_locked": "Compte bloqué. Veuillez <a href='/contact' style='font-weight: 500; text-decoration: underline; color:#565556;'>cliquer ici</a> pour contacter un administrateur et réactiver votre compte.",
 "error.forbidden_word": "Le mot ':word' n'est pas autorisé dans le champ :field.",
-  "error.email_exists": "Cette adresse email est déjà utilisée.",
-  "error.username_exists": "Ce pseudo est déjà utilisé.",
-  "error.invalid_file_type": "Veuillez choisir un format de fichier valide.",
-  "error.invalid_image": "Veuillez choisir une image valide.",
-  "error.max_size": "Veuillez choisir un fichier de taille inférieure à 2Mo.",
-  "error.invalid_date": "Veuillez choisir une date valide.",
-  "error.invalid_type": "Veuillez entrer une valeur de type texte.",
-  "error.invalid_integer": "Veuillez entrer une valeur de type entier.",
-  "error.gender_required": "Veuillez choisir votre sexe.",
-  "error.age_limit": "L'âge minimal est de 13 ans.",
-  "error.email_send": "Une erreur s'est produite lors de l'envoi du mail de validation, mais le compte a été créé !",
-  "success.account_created": "Votre compte a été créé avec succès !<br>Pour finaliser votre inscription, cliquez sur le lien de validation que nous vous avons envoyé par e-mail. Merci et bienvenue parmi nous !",
-  "validation.required": "Ce champ est requis.",
-  "validation.city_required": "Veuillez renseigner la ville.",
-  "validation.street_required": "Veuillez renseigner la rue.",
-  "validation.password.min": "Votre mot de passe doit contenir au minimum 8 caractères.",
-  "validation.password.confirmed": "Les mots de passe ne correspondent pas. Veuillez les vérifier et réessayer.",
-  "validation.password.regex": "Votre mot de passe doit contenir au moins une lettre majuscule, une lettre minuscule, un chiffre et un caractère spécial (-!@# etc.).",
-  "username_invalid": "Le pseudonyme doit contenir uniquement des lettres , des chiffres et des caractères spéciaux (-!@# etc.).",
-  "voyage.activated.title": "Mode voyage activé",
-  "voyage.activated.description": "Vos annonces seront temporairement invisibles pour les autres utilisateurs. Elles réapparaîtront automatiquement lorsque vous désactiverez ce mode.",
-  "voyage.deactivated.title": "Vous avez quitté le Mode voyage",
-  "voyage.deactivated.description": "Vos annonces sont de nouveau visibles.",
-  "Membre depuis le": "Membre depuis le",
+"error.email_exists": "Cette adresse email est déjà utilisée.",
+"error.username_exists": "Ce pseudo est déjà utilisé.",
+"error.invalid_file_type": "Veuillez choisir un format de fichier valide.",
+"error.invalid_image": "Veuillez choisir une image valide.",
+"error.max_size": "Veuillez choisir un fichier de taille inférieure à 2Mo.",
+"error.invalid_date": "Veuillez choisir une date valide.",
+"error.invalid_type": "Veuillez entrer une valeur de type texte.",
+"error.invalid_integer": "Veuillez entrer une valeur de type entier.",
+"error.gender_required": "Veuillez choisir votre sexe.",
+"error.age_limit": "L'âge minimal est de 13 ans.",
+"error.email_send": "Une erreur s'est produite lors de l'envoi du mail de validation, mais le compte a été créé !",
+"success.account_created": "Votre compte a été créé avec succès !<br>Pour finaliser votre inscription, cliquez sur le lien de validation que nous vous avons envoyé par e-mail. Merci et bienvenue parmi nous !",
+"validation.required": "Ce champ est requis.",
+"validation.city_required": "Veuillez renseigner la ville.",
+"validation.street_required": "Veuillez renseigner la rue.",
+"validation.password.min": "Votre mot de passe doit contenir au minimum 8 caractères.",
+"validation.password.confirmed": "Les mots de passe ne correspondent pas. Veuillez les vérifier et réessayer.",
+"validation.password.regex": "Votre mot de passe doit contenir au moins une lettre majuscule, une lettre minuscule, un chiffre et un caractère spécial (-!@# etc.).",
+"username_invalid": "Le pseudonyme doit contenir uniquement des lettres , des chiffres et des caractères spéciaux (-!@# etc.).",
+"voyage.activated.title": "Mode voyage activé",
+"voyage.activated.description": "Vos annonces seront temporairement invisibles pour les autres utilisateurs. Elles réapparaîtront automatiquement lorsque vous désactiverez ce mode.",
+"voyage.deactivated.title": "Vous avez quitté le Mode voyage",
+"voyage.deactivated.description": "Vos annonces sont de nouveau visibles.",
+"Membre depuis le": "Membre depuis le",
 "Noter le SHOP": "Noter le SHOP<span class=\"color strong\">IN</span>ER",
 "Votre publication est en cours de validation": "Votre publication est en cours de validation",
-  "Vous recevrez une notification une fois qu'elle sera approuvée.": "Vous recevrez une notification une fois qu'elle sera approuvée.",
-  "Fermer": "Fermer",
-    "Publier": "Publier",
-     "2 ans": "2 ans",
-  "3 ans": "3 ans",
-  "4 ans": "4 ans",
-  "5 ans": "5 ans",
-  "6 ans": "6 ans",
-  "7 ans": "7 ans",
-  "8 ans": "8 ans",
-  "9 ans": "9 ans",
-  "10 ans": "10 ans",
-  "11 ans": "11 ans",
-  "12 ans": "12 ans",
-  "13 ans": "13 ans",
-  "price_luxury_error_high": "Le prix de vente doit dépasser les 800 DH pour être ajouté à la catégorie LUXURY",
-  "price_luxury_error_low": "Le prix de vente doit être inférieur à 800 DH pour la version non-luxury de cette catégorie."
+"Vous recevrez une notification une fois qu'elle sera approuvée.": "Vous recevrez une notification une fois qu'elle sera approuvée.",
+"Fermer": "Fermer",
+"Publier": "Publier",
+"2 ans": "2 ans",
+"3 ans": "3 ans",
+"4 ans": "4 ans",
+"5 ans": "5 ans",
+"6 ans": "6 ans",
+"7 ans": "7 ans",
+"8 ans": "8 ans",
+"9 ans": "9 ans",
+"10 ans": "10 ans",
+"11 ans": "11 ans",
+"12 ans": "12 ans",
+"13 ans": "13 ans",
+"price_luxury_error_high": "Le prix de vente doit dépasser les 800 DH pour être ajouté à la catégorie LUXURY",
+"price_luxury_error_low": "Le prix de vente doit être inférieur à 800 DH pour la version non-luxury de cette catégorie.",
+"order_notification": "Notification de commande",
+"salutation": "Bonjour",
+"new_order_message": "Nous vous informons que vous avez reçu une nouvelle commande de la part de <span class=\"pseudo\">:buyer_pseudo</span>. Veuillez préparer l'article pour l'expédition. Un livreur de notre partenaire logistique vous contactera bientôt pour récupérer l'article.",
+"order_summary": "Récapitulatif de la commande",
+"receive_amount": "La somme que vous allez recevoir dans votre compte bancaire en Dhs est :",
+"bank_info_confirmation": "Merci de bien vouloir <a href=\":link\" class=\"underlined-link\">cliquer ici</a> pour confirmer ou mettre à jour vos informations bancaires (RIB), afin que nous puissions vous transférer les fonds lorsque le processus de vente sera finalisé.",
+"footer_thanks": "Merci pour votre confiance et à bientôt !"
 
 
 
