--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -642,7 +642,17 @@
 "order_summary": "ملخص الطلب",
 "receive_amount": "المبلغ الذي ستستلمه في حسابك البنكي بالدرهم هو:",
 "bank_info_confirmation": "يرجى <a href=\":link\" class=\"underlined-link\">النقر هنا</a> لتأكيد أو تحديث معلوماتك البنكية (RIB)، حتى نتمكن من تحويل الأموال إليك عند اكتمال عملية البيع.",
-"footer_thanks": "شكرًا لثقتك بنا وإلى اللقاء!"
+"footer_thanks": "شكرًا لثقتك بنا وإلى اللقاء!",
+"welcome1": "مرحبًا بك",
+"welcome": "مرحبًا بك في <b class=\"color\">:app</b>!",
+"greeting": "مرحبًا :username،",
+"account_created": "لقد قمت بإنشاء حساب SHOPIN جديد.",
+"verify_email": "قبل أن تتمكن من استخدام حسابك، يجب عليك تأكيد أن عنوان البريد الإلكتروني هذا يخصك.",
+"confirm_now": "تأكيد الآن",
+"thanks": "شكرًا لك ومرحبًا بك بيننا!",
+"team": "فريق <strong style=\"color:black;\">SHOP</strong><span class=\"color\"><strong>IN</strong></span>",
+"ignore_notice": "إذا لم تحاول التسجيل في منصتنا، يرجى تجاهل هذا البريد الإلكتروني.",
+"follow_us": "تابعنا على وسائل التواصل الاجتماعي!"
 
 
 
