--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -658,7 +658,12 @@
 "for_article": "للمنتج:",
 "thanks1": "شكرًا لاهتمامكم!",
 "team1": "فريق",
-"shopin": "<span style=\"color:black;\">شوب</span><strong style=\"color:#008080;\">ين</strong>"
+"shopin": "<span style=\"color:black;\">شوب</span><strong style=\"color:#008080;\">ين</strong>",
+"password_reset_request": "لقد طلبت إعادة تعيين كلمة المرور لحسابك في <strong style=\"color:black;\">شوب</strong><span style=\"color:#008080;\"><strong>ين</strong></span>. يرجى النقر على الزر أدناه للمتابعة.",
+"reset_now": "إعادة التعيين الآن",
+"not_you": "تلقيت هذا البريد الإلكتروني دون التسجيل؟ <a href=\":link\">انقر هنا</a>"
+
+
 
 
 
