--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -3,6 +3,7 @@
 "email_placeholder": "Email / Username",
 "password_label": "Password",
 "forgot_password": "Forgot password?",
+"forgot_password1": "Forgot password",
 "no_account": "Don't have an account yet?",
 "register": "Register",
 "login": "Log in",
@@ -660,7 +661,14 @@
 "shopin": "SHOP<strong style=\"color:#008080;\">IN</strong>",
 "password_reset_request": "You requested to reset your password for your <strong style=\"color:black;\">SHOP</strong><span style=\"color:#008080;\"><strong>IN</strong></span> account. Please click the button below to proceed.",
 "reset_now": "Reset now",
-"not_you": "You received this email without signing up? <a href=\":link\">Click here</a>"
+"not_you": "You received this email without signing up? <a href=\":link\">Click here</a>",
+"reset_link_sent_title": "Reset Link Sent!",
+"reset_link_sent_message": "An email containing the link to reset your password has been sent. Please check your inbox.",
+"back_to_login": "Back to login page",
+"reset_password_instruction": "Please enter the email address linked to your account to reset your password",
+"enter_your_email": "Please enter your email",
+  "reset": "Reset"
+
 
 
 
