trans-rest-password

--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -668,7 +668,15 @@
 "back_to_login": "العودة إلى صفحة تسجيل الدخول",
 "reset_password_instruction": "يرجى إدخال عنوان البريد الإلكتروني المرتبط بحسابك لإعادة تعيين كلمة المرور الخاصة بك",
 "enter_your_email": "يرجى إدخال بريدك الإلكتروني",
-  "reset": "إعادة تعيين"
+"reset": "إعادة تعيين",
+"enter_new_password": "يرجى إدخال كلمة المرور الجديدة الخاصة بك",
+"enter_password": "أدخل كلمة المرور الخاصة بك",
+"confirm_password_placeholder": "تأكيد كلمة المرور",
+"password_required1": "يرجى إدخال كلمة المرور",
+"password_min1": "يجب أن تحتوي كلمة المرور على 8 أحرف على الأقل",
+"password_confirmed1": "كلمتا المرور غير متطابقتين",
+"success": "تم تحديث كلمة المرور بنجاح!"
+
 
 
 
