add-order-table

--- a/resources/lang/fr.json
+++ b/resources/lang/fr.json
@@ -102,6 +102,7 @@
 "Frais de Livraison": "Frais de Livraison",
 "Ajouter": "Ajouter au panier",
 "Retire": "Rétirer du panier",
+"Retire2": "Rétirer du panier",
 "Réduire le prix": "Réduire le prix",
 "Ajouter aux favoris": "Ajouter aux favoris",
 "Retirer des favoris": "Retirer des favoris",
