--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -675,7 +675,11 @@
 "password_required1": "يرجى إدخال كلمة المرور",
 "password_min1": "يجب أن تحتوي كلمة المرور على 8 أحرف على الأقل",
 "password_confirmed1": "كلمتا المرور غير متطابقتين",
-"success": "تم تحديث كلمة المرور بنجاح!"
+"success": "تم تحديث كلمة المرور بنجاح!",
+  "notification_deleted": "تم حذف الإشعار",
+    "no_notifications": "لا توجد إشعارات",
+  "no_notifications_message": "ليس لديك أي إشعارات حالياً."
+
 
 
 
